--- a/Expense Tracker/wwwroot/css/site.css
+++ b/Expense Tracker/wwwroot/css/site.css
@@ -15,6 +15,10 @@ html {
 html {
   position: relative;
   min-height: 100%;
+  font-family:"Inter"
+}
+*:not(.fa-solid):not(.fa):not(.e-icons){
+    font-family:"Inter"
 }
 
 body {
@@ -27,6 +31,25 @@ body {
     font-size: x-large;
 
 
+}
+.main-content{
+    margin-left:290px;
+}
+.e-breadcrumb a, .e-breadcrumb a:hover {
+    text-decoration: none !important;
+    color: inherit !important;
+}
+.btn:focus, .btn:active{
+    outline: none !important;
+    box-shadow:none;
+}
+.no-a-decoration, .no-a-decoration:hover{
+    text-decoration:none;
+    color:inherit;
+}
+.e-grid{
+    border:0;
+    border-radius:5px;
 }
 
 .e-btn-group.custom-rbt-group {
@@ -48,4 +71,35 @@ body {
     background-color: #fff;
     color: #212b36;
     border: 1px solid #fff;
+}
+#sidebar{
+    background-color: #12161d;
+    border-right:1px dashed rgba(75,82,85,0.24);
+    padding:10px 20px;
+}
+.widget{
+    border-radius:1rem;
+    background-color: #1a222b;
+}
+.widget.summary>div:first-child{
+    background-color:#222b33;
+    padding:1rem;
+    border-top-left-radius:1rem;
+    border-bottom-left-radius:1rem;
+
+}
+.widget.summary>div:first-child i{
+    font-weight:bold;
+}
+.widget.income>div:first-child i{
+    color:#65da41;
+}
+.widget.expense>div:first-child{
+    color:#ff4e48;
+}
+.widget.balance > div:first-child {
+    color: #2aa1ff;
+ }
+.widget.chart{
+    padding:5px;
 }
